# tablebooking

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 0650dc2e10bc_added_reservation_index.py  0d2463a7ef77_created_table_and_reservation_models.py
app/: main.py
app/core/: config.py  database.py  exceptions.py  logger.py
app/models/: reservation.py  table.py
app/routers/: __init__.py  reservations.py  tables.py
app/services/: reservation_service.py  table_service.py
tests/: conftest.py
tests/routers/: test_reservations.py  test_tables.py
